# cmake_cpp_lib

./: CMakeLists.txt  README.md
include/projectLib/: ProjectExample.h
src/: CMakeLists.txt
src/projectLib/: ProjectExample.cpp
test/: CMakeLists.txt  main.cpp
test/projectLib/: ProjectExampleTest.cpp
